--- a/notebooks/calculate_error_statistics.ipynb
+++ b/notebooks/calculate_error_statistics.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "# Identify the data input and output directories:\n",
     "composite_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/composite_projections/'\n",
-    "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
+    "ba_to_process_input_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
     "statistics_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n"
    ]
   },
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Read the yml file into a dictionary:\n",
-    "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
+    "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
     "     ba_list = yaml.load(yml, Loader=yaml.FullLoader)\n",
     "     bas = [i for i in ba_list.keys()]\n",
     "\n",
