--- a/notebooks/plot_ba_error_evolution.ipynb
+++ b/notebooks/plot_ba_error_evolution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -50,8 +50,8 @@
    "source": [
     "# Identify the data input and image output directories:\n",
     "statistics_input_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
-    "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
-    "image_output_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/figures/'\n"
+    "ba_to_process_input_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
+    "image_output_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/figures/'\n"
    ]
   },
   {
@@ -66,24 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "56d2b5ea-9529-49d7-9409-3087056efe99",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read the yml file into a dictionary:\n",
-    "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
+    "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
     "     ba_list = yaml.load(yml, Loader=yaml.FullLoader)\n",
     "     bas = [i for i in ba_list.keys()]\n",
     "\n",
@@ -101,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "086e395e-2bf9-4328-bb14-931b5cba7a61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_ba_error_evolution(ba_to_plot: str, statistics_input_directory: str, image_output_dir: str, image_resolution: int, save_images=False):\n",
+    "def plot_ba_error_evolution(ba_to_plot: str, statistics_input_directory: str, image_output_directory: str, image_resolution: int, save_images=False):\n",
     "    \n",
     "    # Read in the compiled statistics dataset created by the \"calculate_error_statistics.ipynb\" notebook:\n",
     "    stats_df = pd.read_csv((statistics_input_directory + 'Error_Statistics_Data.csv'))\n",
@@ -208,7 +197,7 @@
     "    \n",
     "    # If the \"save_images\" flag is set to true then save the plot to a .png file:\n",
     "    if save_images == True:\n",
-    "       plt.savefig(os.path.join(image_output_dir + 'BA_Error_Evolution_' + ba_to_plot + '.png'), dpi=image_resolution, bbox_inches='tight')\n",
+    "       plt.savefig(os.path.join(image_output_directory + 'BA_Error_Evolution_' + ba_to_plot + '.png'), dpi=image_resolution, bbox_inches='tight')\n",
     "       plt.close()\n"
    ]
   },
@@ -222,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "18593f25-974f-47b6-ac17-a04ffec75d1b",
    "metadata": {},
    "outputs": [],
@@ -231,7 +220,7 @@
     "for ba in bas:\n",
     "    plot_ba_error_evolution(ba_to_plot = ba,\n",
     "                            statistics_input_directory = statistics_input_directory,\n",
-    "                            image_output_dir = image_output_dir, \n",
+    "                            image_output_directory = image_output_directory, \n",
     "                            image_resolution = 300, \n",
     "                            save_images = True)\n"
    ]
