--- a/notebooks/train_and_run_mlp_models.ipynb
+++ b/notebooks/train_and_run_mlp_models.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "86db683a-70a2-4f89-a1d6-4c6d5f180272",
    "metadata": {
     "tags": []
@@ -37,15 +37,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "aa5a9e7b-a9a7-4fdd-957e-2bb5f063afdd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Identify the top-level directory to store the trained MLP models:\n",
-    "cleaned_ba_data_output_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/cleaned_historical_data/'\n",
-    "ba_to_process_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
-    "weather_data_input_dir =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/historical_weather'\n",
+    "cleaned_ba_data_output_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/cleaned_historical_data/'\n",
+    "ba_to_process_input_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/'\n",
+    "weather_data_input_directory =  '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/historical_weather'\n",
     "model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/trained_mlp_models/'\n",
     "prediction_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/mlp_projections/'\n",
     "composite_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/composite_projections/'\n"
@@ -63,24 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "be839966-941b-4902-af8e-5de92b71b22a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read the yml file into a dictionary:\n",
-    "with open((ba_to_process_input_dir + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
+    "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
     "     ba_list = yaml.load(yml, Loader=yaml.FullLoader)\n",
     "     bas = [i for i in ba_list.keys()]\n",
     "\n",
@@ -100,99 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "439b742f-c5e9-487b-be65-ee3f25199ec7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function train in module tell.mlp_train:\n",
-      "\n",
-      "train(region: str, data_dir: str, **kwargs)\n",
-      "    Generate predictions for MLP model for a target region from an input CSV file.\n",
-      "    \n",
-      "    :param region:                      Indicating region / balancing authority we want to train and test on.\n",
-      "                                        Must match with string in CSV files.\n",
-      "    :type region:                       str\n",
-      "    \n",
-      "    :param data_dir:                    Full path to the directory that houses the input CSV files.\n",
-      "    :type data_dir:                     str\n",
-      "    \n",
-      "    :param mlp_hidden_layer_sizes:      The ith element represents the number of neurons in the ith hidden layer.\n",
-      "    :type mlp_hidden_layer_sizes:       Optional[int]\n",
-      "    \n",
-      "    :param mlp_max_iter:                Maximum number of iterations. The solver iterates until convergence\n",
-      "                                        (determined by ‘tol’) or this number of iterations. For stochastic solvers\n",
-      "                                        (‘sgd’, ‘adam’), note that this determines the number of epochs (how many\n",
-      "                                        times each data point will be used), not the number of gradient steps.\n",
-      "    :type mlp_max_iter:                 Optional[int]\n",
-      "    \n",
-      "    :param mlp_validation_fraction:     The proportion of training data to set aside as validation set for early\n",
-      "                                        stopping. Must be between 0 and 1.\n",
-      "    :type mlp_validation_fraction:      Optional[float]\n",
-      "    \n",
-      "    :param data_column_rename_dict:     Dictionary for the field names present in the input CSV file (keys) to what the\n",
-      "                                        code expects them to be (values).\n",
-      "    :type data_column_rename_dict:      Optional[dict[str]]\n",
-      "    \n",
-      "    :param expected_datetime_columns:   Expected names of the date time columns in the input CSV file.\n",
-      "    :type expected_datetime_columns:    Optional[list[str]]\n",
-      "    \n",
-      "    :param hour_field_name:             Field name of the hour field in the input CSV file.\n",
-      "    :type hour_field_name:              Optional[str]\n",
-      "    \n",
-      "    :param month_field_name:            Field name of the month field in the input CSV file.\n",
-      "    :type month_field_name:             Optional[str]\n",
-      "    \n",
-      "    :param x_variables:                 Target variable list.\n",
-      "    :type x_variables:                  Optional[list[str]]\n",
-      "    \n",
-      "    :param add_dayofweek_xvars:         True if the user wishes to add weekday and holiday targets to the x variables.\n",
-      "    :type add_dayofweek_xvars:          Optional[bool]\n",
-      "    \n",
-      "    :param y_variables:                 Feature variable list.\n",
-      "    :type y_variables:                  Optional[list[str]]\n",
-      "    \n",
-      "    :param day_list:                    List of day abbreviations and their order.\n",
-      "    :type day_list:                     Optional[list[str]]\n",
-      "    \n",
-      "    :param start_time:                  Timestamp showing the datetime of for the run to start\n",
-      "                                        (e.g., 2016-01-01 00:00:00).\n",
-      "    :type start_time:                   Optional[str]\n",
-      "    \n",
-      "    :param end_time:                    Timestamp showing the datetime of for the run to end\n",
-      "                                        (e.g., 2019-12-31 23:00:00).\n",
-      "    :type end_time:                     Optional[str]\n",
-      "    \n",
-      "    :param split_datetime:              Timestamp showing the datetime to split the train and test data by\n",
-      "                                        (e.g., 2018-12-31 23:00:00).\n",
-      "    :type split_datetime:               Optional[str]\n",
-      "    \n",
-      "    :param nodata_value:                No data value in the input CSV file.\n",
-      "    :type nodata_value:                 Optional[int]\n",
-      "    \n",
-      "    :param seed_value:                  Seed value to reproduce randomization.\n",
-      "    :type seed_value:                   Optional[int]\n",
-      "    \n",
-      "    :param save_model:                  Choice to write ML models to a pickled file via joblib.\n",
-      "    :type save_model:                   bool\n",
-      "    \n",
-      "    :param model_output_directory:      Full path to output directory where model file will be written.\n",
-      "    :type model_output_directory:       Union[str, None]\n",
-      "    \n",
-      "    :param verbose:                     Choice to see logged outputs.\n",
-      "    :type verbose:                      bool\n",
-      "    \n",
-      "    :return:                            [0] Predictions as a dataframe\n",
-      "                                        [1] Summary statistics as a dataframe\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For more information about the training of predictive models you can call the help function:\n",
     "help(tell.train)\n"
@@ -200,186 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ccddc4b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>predictions</th>\n",
-       "      <th>ground_truth</th>\n",
-       "      <th>region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-01-01 00:00:00</td>\n",
-       "      <td>14132.962047</td>\n",
-       "      <td>22497.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-01-01 01:00:00</td>\n",
-       "      <td>16730.206115</td>\n",
-       "      <td>24297.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-01-01 02:00:00</td>\n",
-       "      <td>17538.045667</td>\n",
-       "      <td>26918.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-01-01 03:00:00</td>\n",
-       "      <td>17851.649071</td>\n",
-       "      <td>26849.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-01-01 04:00:00</td>\n",
-       "      <td>17573.402353</td>\n",
-       "      <td>25968.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2020-01-01 05:00:00</td>\n",
-       "      <td>16992.306304</td>\n",
-       "      <td>25044.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2020-01-01 06:00:00</td>\n",
-       "      <td>16169.389993</td>\n",
-       "      <td>24185.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2020-01-01 07:00:00</td>\n",
-       "      <td>15322.279828</td>\n",
-       "      <td>23305.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2020-01-01 08:00:00</td>\n",
-       "      <td>14480.421379</td>\n",
-       "      <td>22467.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2020-01-01 09:00:00</td>\n",
-       "      <td>13801.735347</td>\n",
-       "      <td>21810.0</td>\n",
-       "      <td>CISO</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             datetime   predictions  ground_truth region\n",
-       "0 2020-01-01 00:00:00  14132.962047       22497.0   CISO\n",
-       "1 2020-01-01 01:00:00  16730.206115       24297.0   CISO\n",
-       "2 2020-01-01 02:00:00  17538.045667       26918.0   CISO\n",
-       "3 2020-01-01 03:00:00  17851.649071       26849.0   CISO\n",
-       "4 2020-01-01 04:00:00  17573.402353       25968.0   CISO\n",
-       "5 2020-01-01 05:00:00  16992.306304       25044.0   CISO\n",
-       "6 2020-01-01 06:00:00  16169.389993       24185.0   CISO\n",
-       "7 2020-01-01 07:00:00  15322.279828       23305.0   CISO\n",
-       "8 2020-01-01 08:00:00  14480.421379       22467.0   CISO\n",
-       "9 2020-01-01 09:00:00  13801.735347       21810.0   CISO"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BA</th>\n",
-       "      <th>RMS_ABS</th>\n",
-       "      <th>RMS_NORM</th>\n",
-       "      <th>MAPE</th>\n",
-       "      <th>R2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CISO</td>\n",
-       "      <td>3502.927734</td>\n",
-       "      <td>0.141187</td>\n",
-       "      <td>0.132898</td>\n",
-       "      <td>0.649472</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     BA      RMS_ABS  RMS_NORM      MAPE        R2\n",
-       "0  CISO  3502.927734  0.141187  0.132898  0.649472"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run the MLP training step for a single BA to get a feel of the functionality:\n",
     "prediction_df, validation_df = tell.train(region = 'CISO',\n",
-    "                                          data_dir = cleaned_ba_data_output_dir,\n",
+    "                                          data_dir = cleaned_ba_data_output_directory,\n",
     "                                          start_time = '2018-01-01 00:00:00',\n",
     "                                          end_time = '2020-12-31 23:00:00',\n",
     "                                          split_datetime = '2019-12-31 23:00:00',\n",
@@ -402,7 +134,6 @@
    "source": [
     "# Run the training iteratively across all training windows and BAs:\n",
     "for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
-    "\n",
     "    # Set the training and evaluation periods for the specific model training window:\n",
     "    if model == 'MLP1':\n",
     "       start_time_model = '2016-01-01 00:00:00'\n",
@@ -441,7 +172,7 @@
     "        \n",
     "        # Run the MLP training for that BA and model training period:\n",
     "        prediction_df, validation_df = tell.train(region = ba,\n",
-    "                                                  data_dir = cleaned_ba_data_output_dir,\n",
+    "                                                  data_dir = cleaned_ba_data_output_directory,\n",
     "                                                  start_time = start_time_model,\n",
     "                                                  end_time = end_time_model,\n",
     "                                                  split_datetime = split_datetime_model,\n",
@@ -483,7 +214,7 @@
     "# Run the MLP forward projection step for a single BA to get a feel of the functionality:\n",
     "pdf = tell.predict(region = 'CISO',\n",
     "                   year = 2023,\n",
-    "                   data_dir = weather_data_input_dir,\n",
+    "                   data_dir = weather_data_input_directory,\n",
     "                   datetime_field_name = 'Time_UTC',\n",
     "                   save_prediction = True,\n",
     "                   model_output_directory = '/Users/burl878/Documents/Code/code_repos/burleyson-etal_2025_ldrd/data/trained_mlp_models/MLP1',\n",
@@ -501,7 +232,6 @@
    "source": [
     "# Run the forward projection step iteratively across all training windows and BAs:\n",
     "for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
-    "\n",
     "    # Set the first forward year for each model:\n",
     "    if model == 'MLP1':\n",
     "       first_forward_year = 2018\n",
@@ -532,7 +262,7 @@
     "            # Run the MLP forward projection for that BA, model, and year:\n",
     "            pdf = tell.predict(region = ba,\n",
     "                               year = year,\n",
-    "                               data_dir = weather_data_input_dir,\n",
+    "                               data_dir = weather_data_input_directory,\n",
     "                               datetime_field_name = 'Time_UTC',\n",
     "                               save_prediction = True,\n",
     "                               model_output_directory = (model_output_directory + model + '/'),\n",
@@ -561,7 +291,7 @@
     "for ba in bas:\n",
     "\n",
     "    # Load in the compiled historical data from the TELL repository:\n",
-    "    base_df = pd.read_csv((cleaned_ba_data_output_dir + ba + '_cleaned_historical_data.csv'), index_col=None, header=0)\n",
+    "    base_df = pd.read_csv((cleaned_ba_data_output_directory + ba + '_cleaned_historical_data.csv'), index_col=None, header=0)\n",
     "\n",
     "    # Convert the time columns into one datetime variable:\n",
     "    base_df['Time_UTC'] = pd.to_datetime(base_df[['Year', 'Month', 'Day', 'Hour']])\n",
