--- a/notebooks/plot_ba_load_weather_time_series.ipynb
+++ b/notebooks/plot_ba_load_weather_time_series.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -68,10 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "64309090-3967-472e-a678-036b5e50ae26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read the yml file into a dictionary:\n",
     "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "bcf793ca-a357-47ee-8a5f-a9f00275b184",
    "metadata": {},
    "outputs": [],
@@ -105,18 +116,25 @@
     "    ba_df['Time_UTC'] = pd.to_datetime(ba_df[['Year', 'Month', 'Day', 'Hour']])\n",
     "    \n",
     "    # Create new columns with the cleaned demand and the change in demand between sequential hours:\n",
+    "    ba_df['Cleaning_Code'] = 0\n",
     "    ba_df['Cleaned_Demand_MWh'] = ba_df['Adjusted_Demand_MWh']\n",
     "    ba_df['Demand_Change_MWh'] = ba_df['Adjusted_Demand_MWh'].diff()\n",
     "\n",
-    "    # Replace all hours with demands of 0 MWh with NaN:\n",
-    "    ba_df['Cleaned_Demand_MWh'] = ba_df['Cleaned_Demand_MWh'].replace(0, np.nan)\n",
+    "    # Log all hours with demands of 0 MWh as -9999:\n",
+    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] == 0, 'Cleaning_Code'] = -9999\n",
+    "    ba_df.loc[ba_df['Cleaning_Code'].shift(1) == -9999, 'Demand_Change_MWh'] = 0\n",
     "\n",
-    "    # Replace all rows in which the hour-to-hour change in demand is more than 10 times greater than the mean change with NaN:\n",
-    "    ba_df.loc[abs(ba_df['Demand_Change_MWh']) >= (10*(abs(ba_df['Demand_Change_MWh']).mean())), 'Cleaned_Demand_MWh'] = np.nan\n",
+    "    # Log all rows in which the absolute hour-to-hour change in demand is more than 15 times greater than the mean absolute change as -8888:\n",
+    "    ba_df.loc[((abs(ba_df['Demand_Change_MWh']) >= (15*(abs(ba_df['Demand_Change_MWh']).mean()))) & (ba_df['Cleaning_Code'] != -9999)), 'Cleaning_Code'] = -8888\n",
+    "    ba_df.loc[ba_df['Cleaning_Code'].shift(1) == -8888, 'Cleaning_Code'] = 0\n",
     "\n",
-    "    # Replace all rows in which the hourly load is more than 5 standard deviations from the mean value with NaN:\n",
-    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] >= ((5*ba_df['Adjusted_Demand_MWh'].std()) + ba_df['Adjusted_Demand_MWh'].mean()), 'Cleaned_Demand_MWh'] = np.nan\n",
-    "    \n",
+    "    # Log all rows in which the hourly load is more than 7 standard deviations from the mean value as -7777:\n",
+    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] >= (ba_df['Adjusted_Demand_MWh'].mean() + (7*ba_df['Adjusted_Demand_MWh'].std())), 'Cleaning_Code'] = -7777\n",
+    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] <= (ba_df['Adjusted_Demand_MWh'].mean() - (7*ba_df['Adjusted_Demand_MWh'].std())), 'Cleaning_Code'] = -7777\n",
+    "\n",
+    "    # Replace all of the cleaned hours demand with NaN:\n",
+    "    ba_df.loc[ba_df['Cleaning_Code'] != 0, 'Cleaned_Demand_MWh'] = np.nan\n",
+    "        \n",
     "    # Set the output file name:\n",
     "    csv_output_filename = (cleaned_ba_data_output_directory + ba_to_process + '_cleaned_historical_data.csv')\n",
     "\n",
@@ -126,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "712f3abf-b208-4dc1-911d-0d325d04af92",
    "metadata": {},
    "outputs": [],
@@ -135,7 +153,7 @@
     "for ba in bas:\n",
     "    clean_load_time_series(ba_to_process = ba,\n",
     "                           start_year = 2016,\n",
-    "                           end_year = 2023,\n",
+    "                           end_year = 2024,\n",
     "                           ba_data_input_directory = ba_data_input_directory,\n",
     "                           cleaned_ba_data_output_directory = cleaned_ba_data_output_directory)\n"
    ]
@@ -145,12 +163,12 @@
    "id": "e3d184bc-4193-4b2c-96b6-4a4a8d66824a",
    "metadata": {},
    "source": [
-    "## Create a Function to Create the Quick Look Plot for a Given Balancing Authority\n"
+    "## Create a Function to Create Quick Look Plots for a Given Balancing Authority\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "086e395e-2bf9-4328-bb14-931b5cba7a61",
    "metadata": {},
    "outputs": [],
@@ -171,26 +189,31 @@
     "    # Count the number of missing load values to gauge the extent of the data cleaning:\n",
     "    missing_data_count = ba_df['Cleaned_Demand_MWh'].isna().sum()\n",
     "    missing_data_percentage = (100*(ba_df['Cleaned_Demand_MWh'].isna().sum()/ba_df.shape[0])).round(3)\n",
+    "    missing_data = ba_df.loc[ba_df['Cleaning_Code'] == -9999].shape[0]\n",
+    "    large_change = ba_df.loc[ba_df['Cleaning_Code'] == -8888].shape[0]\n",
+    "    large_std = ba_df.loc[ba_df['Cleaning_Code'] == -7777].shape[0]\n",
     "\n",
-    "    # Make the plot:\n",
+    "    # Make the time series plot:\n",
     "    plt.figure(figsize=(35, 25))\n",
     "    plt.rcParams['font.size'] = 18\n",
     "    plt.subplot(411)\n",
-    "    plt.grid(True)\n",
     "    plt.plot(ba_df['Time_UTC'], ba_df['Adjusted_Demand_MWh'], color='k', linestyle='-', linewidth=0.5)\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Adjusted_Demand_MWh'], s=50, c='g', label=('Missing Data (N=' + str(missing_data) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=50, c='c', label=('Hour-to-Hour Change > 15x Mean (N=' + str(large_change) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=50, c='m', label=('Load Outside Mean +/- 7 STD (N=' + str(large_std) + ')'))\n",
     "    plt.xlim([datetime.date(start_year, 1, 1), datetime.date(end_year+1, 1, 1)])\n",
     "    plt.ylim([(ba_df['Adjusted_Demand_MWh'].min() - 0.1*ba_df['Adjusted_Demand_MWh'].min()), (ba_df['Adjusted_Demand_MWh'].max() + 0.1*ba_df['Adjusted_Demand_MWh'].max())])\n",
     "    plt.ylabel('EIA 930 Adjusted Demand [MWh]', fontsize=18)\n",
+    "    plt.legend(loc='best')\n",
     "    plt.title(('Raw Hourly Electricity Demand in ' + ba_to_plot + ' (Peak = ' + str(ba_df['Adjusted_Demand_MWh'].max().round(0)) + ' MWh)'), fontsize=21)\n",
     "    plt.title('a)', loc='left', fontsize=18)\n",
     "\n",
     "    plt.subplot(412)\n",
-    "    plt.grid(True)\n",
     "    plt.plot(ba_df['Time_UTC'], ba_df['Cleaned_Demand_MWh'], color='b', linestyle='-', linewidth=0.5)\n",
     "    plt.xlim([datetime.date(start_year, 1, 1), datetime.date(end_year+1, 1, 1)])\n",
     "    plt.ylim([(ba_df['Adjusted_Demand_MWh'].min() - 0.1*ba_df['Adjusted_Demand_MWh'].min()), (ba_df['Adjusted_Demand_MWh'].max() + 0.1*ba_df['Adjusted_Demand_MWh'].max())])\n",
     "    plt.ylabel('Cleaned Demand [MWh]', fontsize=18)\n",
-    "    plt.title(('Cleaned Demand in ' + ba_to_plot + ' (Hours Cleaned Percentage = ' + str(missing_data_percentage) + '%)'), fontsize=21)\n",
+    "    plt.title(('Cleaned Demand in ' + ba_to_plot + ' (Peak = ' + str(ba_df['Cleaned_Demand_MWh'].max().round(0)) + ' MWh, Hours Cleaned = ' + str(missing_data_percentage) + '%)'), fontsize=21)\n",
     "    plt.title('b)', loc='left', fontsize=18)\n",
     "\n",
     "    plt.subplot(413)\n",
@@ -214,7 +237,28 @@
     "    # If the \"save_images\" flag is set to true then save the plot to a .png file:\n",
     "    if save_images == True:\n",
     "       plt.savefig(os.path.join(image_output_directory + 'BA_Load_Weather_Time_Series_' + ba_to_plot + '.png'), dpi=image_resolution, bbox_inches='tight')\n",
-    "       plt.close()\n"
+    "       plt.close()\n",
+    "\n",
+    "    # Make the temperature vs load plot:\n",
+    "    plt.figure(figsize=(35, 25))\n",
+    "    plt.rcParams['font.size'] = 18\n",
+    "    plt.grid(True)\n",
+    "    plt.scatter(ba_df['T2'], ba_df['Adjusted_Demand_MWh'], s=35, c='k', label=('All Data (N=' + str(ba_df.shape[0]) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Adjusted_Demand_MWh'], s=35, c='g', label=('Missing Data (N=' + str(missing_data) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=35, c='c', label=('Hour-to-Hour Change > 15x Mean (N=' + str(large_change) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=35, c='m', label=('Load Outside Mean +/- 7 STD (N=' + str(large_std) + ')'))\n",
+    "    plt.xlim([(ba_df['T2'].min() - 4), (ba_df['T2'].max() + 4)])\n",
+    "    plt.xlabel('Pop-Weighted Temperature [$^\\circ$F]', fontsize=18)\n",
+    "    plt.ylim([(ba_df['Adjusted_Demand_MWh'].min() - 0.15*ba_df['Adjusted_Demand_MWh'].min()), (ba_df['Adjusted_Demand_MWh'].max() + 0.15*ba_df['Adjusted_Demand_MWh'].max())])\n",
+    "    plt.ylabel('EIA 930 Adjusted Demand [MWh]', fontsize=18)\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.title(('Demand-Temperature Relationship in ' + ba_to_plot), fontsize=21)\n",
+    "\n",
+    "    # If the \"save_images\" flag is set to true then save the plot to a .png file:\n",
+    "    if save_images == True:\n",
+    "       plt.savefig(os.path.join(image_output_directory + 'BA_Temperature_Load_Relationship_' + ba_to_plot + '.png'), dpi=image_resolution, bbox_inches='tight')\n",
+    "       plt.close()\n",
+    "    "
    ]
   },
   {
@@ -227,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "18593f25-974f-47b6-ac17-a04ffec75d1b",
    "metadata": {},
    "outputs": [],
@@ -236,7 +280,7 @@
     "for ba in bas:\n",
     "    output_df = plot_load_weather_time_series(ba_to_plot = ba,\n",
     "                                              start_year = 2016,\n",
-    "                                              end_year = 2023,\n",
+    "                                              end_year = 2024,\n",
     "                                              ba_data_input_directory = ba_data_input_directory,\n",
     "                                              image_output_directory = image_output_directory, \n",
     "                                              image_resolution = 300, \n",
